--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -12,7 +12,7 @@
                 <h1>CSS Bayan</h1> 
         </div>
     
-    <div class="Mybayans">
+    <div class="mybayans">
         <div class="bayan">
                 <input id="bayan_one" type="checkbox" name="bayans">
                 <label for="bayan_one">Когда хочешь внести небольшие 
